@@ -811,12 +811,9 @@ dd {
 table {
 	font-size: 100%;
 	color: black;
-	/* we don't want the bottom borders of <h2>s to be visible through
-	 * floated tables */
-	background-color: white;
 }
 fieldset table {
-	/* but keep table layouts in forms clean... */
+	/* keep table layouts in forms clean from background colors... */
 	background: none;
 }
 /* Forms */
